tests/baselines/reference/generatorTypeCheck53.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck53.ts(5,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck53.ts (1 errors) ====
    class Foo { x: number }
    class Baz { z: number }
    function* g() {
        yield new Foo;
        yield* [new Baz];
               ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    }